KarelWorld cleanup: - Replace single letter variable names with more readable names - Replace RuntimeExceptions with a more relevant exception type - Fix incorrect static method invocation in coordinate check methods - Use pattern variables in if-statements - Use new stdlib methods to terminate streams